--- a/foundations/flex/03-flex-header-2/index.html
+++ b/foundations/flex/03-flex-header-2/index.html
@@ -9,18 +9,20 @@
   </head>
   <body>
     <div class="header">
-      <div class="logo">
-        LOGO
-      </div>
+      <div class="left-section">
+      <div class="logo">LOGO</div>
+      <nav>
       <ul class="links">
-        <li><a href="https://google.com">link-one</a></li>
+          <li><a href="https://google.com">link-one</a></li>
         <li><a href="https://google.com">link-two</a></li>
         <li><a href="https://google.com">link-three</a></li>
       </ul>
-      <button class="notifications">
-        1 new notification
-      </button>
+      </nav>
+      </div>
+      <div class="right-section">
+      <button class="notifications">1 new notification</button>
       <div class="profile-image"></div>
+    </div>
     </div>
   </body>
 </html>
